--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -23,5 +23,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src", "images.d.ts", "../react-app-env.d.ts"]
 }
